--- a/style.css
+++ b/style.css
@@ -673,5 +673,11 @@ footer {
     transform: rotate(360deg);
   }
 }
-
-
+@keyframes glowPulse {
+  0%, 100% {
+    box-shadow: 0 0 15px cyan, 0 0 30px cyan;
+  }
+  50% {
+    box-shadow: 0 0 30px #00e5ff, 0 0 60px #00e5ff;
+  }
+}
