--- a/style.css
+++ b/style.css
@@ -90,9 +90,9 @@ nav ul {
 }
 nav ul li a {
   color: cyan;
-  font-weight: 500;
-  font-family: 'Great Vibes', cursive;
-  font-size: 1.5rem;
+  font-family: 'Lobster', cursive;
+  font-size: 1.4rem;
+  text-decoration: none; /* Menghilangkan garis bawah */
   text-shadow: 0 0 8px cyan;
 }
 
